# OMMS-STXK

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  admin_dashboard.html  app.css  login.html  main.py  nginx.conf  run.sh  student_dashboard.html  student_profile.html
club-hot/: Cargo.toml
club-hot/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  redis_seats.rs  state.rs  types.rs
web/: admin_dashboard.html  app.css  login.html  student_dashboard.html
