[package]
name = "club-hot"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
deadpool-redis = "0.23.0"
deadpool-sqlite = "0.13.0"
rand = "0.10.1"
redis = { version = "1.2.3", features = ["tokio-comp", "script", "aio", "connection-manager"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["formatting", "parsing", "local-offset", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["limit", "timeout", "load-shed"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
